# vulkan-app

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  cube.h  vkvia.html
include/: aabb.h  app_camera.h  app_modeldata.h  app_renderobject.h  app_ubo.h  app_window.h  application_context.h  camera.h  context.h  debug.h  debug_cube.h  emitter.h  entity.h  error.h  imagememory.h  kotlin.h  light.h  modeldata.h  obb.h  pipelineconfig.h  push_constants.h  renderobject.h  renderresources.h  sound.h  ubo.h  ubo_update.h  util_strings.h  vertex.h  vulkan_device_context.h
include/pipelines/: compute_pipeline_config.h  pipeline_config.h  pipeline_config_shared.h  pipeline_shader_util.h  shared.h  viewport_util.h
include/pipelines/basic/: basic_pipeline.h  basic_pipeline_config.h  basic_pipeline_descriptor_pool.h  basic_pipeline_frag_descriptor_set_layout.h  basic_pipeline_renderpass.h  basic_pipeline_update_descriptor_sets.h  basic_pipeline_vertex_descriptor_set_layout.h  config.h  pipeline.h  pipeline_layout.h
include/pipelines/debug/: config.h  debug_pipeline.h  debug_pipeline_config.h  debug_pipeline_layout.h  debug_pipeline_renderpass.h  pipeline.h
include/pipelines/pfx/: particle.h  pfx_compute_pipeline.h  pfx_compute_pipeline_config.h  pfx_compute_pipeline_descriptor_pool.h  pfx_compute_pipeline_descriptor_set_layout.h  pfx_compute_pipeline_layout.h  pfx_pipeline.h  pfx_pipeline_config.h  pfx_pipeline_descriptor_pool.h  pfx_pipeline_frag_descriptor_set_layout.h  pfx_pipeline_layout.h  pfx_pipeline_renderpass.h  pfx_pipeline_update_descriptor_sets.h  pfx_pipeline_vertex_descriptor_set_layout.h
include/vulkan/: buffer.h  buffer_memory.h  commandbuffer.h  commandpool.h  context.h  depth.h  descriptor.h  framebuffer.h  image.h  instance.h  memory.h  physicaldevice.h  pipeline.h  render.h  renderpass.h  sampler.h  setup.h  shaders.h  swapchain.h
kotlin-game/: build.gradle.kts  settings.gradle.kts
kotlin-game/cinterop/: model.def  model.h
kotlin-game/gradle/wrapper/: gradle-wrapper.properties
kotlin-game/src/nativeMain/kotlin/com/fluxtah/application/: MyApplication.kt
kotlin-game/src/nativeMain/kotlin/com/fluxtah/application/api/: Application.kt  ApplicationContext.kt  Camera.kt  Entity.kt  EntityBehavior.kt  Light.kt  Scene.kt  Sound.kt
kotlin-game/src/nativeMain/kotlin/com/fluxtah/application/api/camera/: Camera.kt  CameraBehavior.kt  CameraBuilder.kt
kotlin-game/src/nativeMain/kotlin/com/fluxtah/application/api/emitter/: Emitter.kt  EmitterBehavior.kt  EmitterBuilder.kt  EmitterPoolBuilder.kt
kotlin-game/src/nativeMain/kotlin/com/fluxtah/application/api/entity/: Entity.kt  EntityBehavior.kt  EntityBuilder.kt  EntityPoolBuilder.kt  KtCollisionCallback.kt
kotlin-game/src/nativeMain/kotlin/com/fluxtah/application/api/input/: Key.kt
kotlin-game/src/nativeMain/kotlin/com/fluxtah/application/api/interop/: CCamera.kt  CEmitter.kt  CEntity.kt  CInput.kt  CLight.kt  CSound.kt  HelloCallback.kt  Model.kt  VkDescriptorSetLayout.kt  VkDevice.kt  VkPipeline.kt  VkPipelineLayout.kt  VkRenderPass.kt  VkShaderModule.kt  VkSwapChain.kt  VulkanContext.kt
kotlin-game/src/nativeMain/kotlin/com/fluxtah/application/api/math/: ToRadians.kt  Vector3.kt
kotlin-game/src/nativeMain/kotlin/com/fluxtah/application/api/scene/: Scene.kt  SceneBuilder.kt  SceneImpl.kt
kotlin-game/src/nativeMain/kotlin/com/fluxtah/application/api/sequence/: Sequence.kt  SequenceBuilder.kt
kotlin-game/src/nativeMain/kotlin/com/fluxtah/application/apps/shipgame/: CameraInputHandler.kt  ChaseCamera.kt  Id.kt  InfiniteMap.kt  PerlinNoise.kt  ShipGame.kt  Spaceship.kt
kotlin-game/src/nativeMain/kotlin/com/fluxtah/application/apps/shipgame/behaviors/: AsteroidBehavior.kt  AsteroidDieBehavior.kt  AsteroidMovementBehavior.kt  ChaseCameraBehavior.kt  ExplosionEmitterBehavior.kt  FirePlasmaCannonBehaviour.kt  FireWeaponBehaviour.kt  PlasmaBoltBehaviour.kt  (+7 more)
libs/: dr_wav.h  stb_image.h
models/: asteroid.glb  cube-normal.glb  cube.glb  plane.glb  plasma-bolt.blend  plasma-bolt.blend1  plasma-bolt.glb  quad-explosion.blend  quad-explosion.blend1  quad-explosion.glb  ship-luma.glb  ship.blend  ship.blend1  ship.glb  tile.blend  tile.blend1  tile.glb  tile2.blend  tile2.blend1  tile2.glb
shaders/: basic.frag  basic.frag.spv  basic.vert  basic.vert.spv  debug.frag  debug.frag.spv  debug.vert  debug.vert.spv  particle.comp  particle.comp.spv  particle.frag  particle.frag.spv  particle.vert  particle.vert.spv  test.frag
src/: aabb.c  app_camera.c  app_modeldata.c  app_renderobject.c  app_window.c  camera.c  debug.c  emitter.c  entity.c  error.c  imagememory.c  kotlin.c  light.c  main.c  modeldata.c  pipelineconfig.c  renderobject.c  renderresources.c  sound.c  ubo.c  ubo_update.c  util_strings.c  window.c
src/pipelines/: compute_pipeline_config.c  pipeline_config.c  pipeline_config_shared.c  pipeline_shader_util.c  shader_util.c  shared.c  viewport_util.c
src/pipelines/basic/: basic_pipeline.c  basic_pipeline_config.c  basic_pipeline_descriptor_pool.c  basic_pipeline_frag_descriptor_set_layout.c  basic_pipeline_layout.c  basic_pipeline_renderpass.c  basic_pipeline_update_descriptor_sets.c  basic_pipeline_vertex_descriptor_set_layout.c  config.c  pipeline.c  pipeline_layout.c
src/pipelines/debug/: config.c  debug_pipeline.c  debug_pipeline_config.c  debug_pipeline_layout.c  debug_pipeline_renderpass.c  pipeline.c  pipeline_layout.c
src/pipelines/pfx/: pfx_compute_pipeline.c  pfx_compute_pipeline_config.c  pfx_compute_pipeline_descriptor_pool.c  pfx_compute_pipeline_descriptor_set_layout.c  pfx_compute_pipeline_layout.c  pfx_pipeline.c  pfx_pipeline_config.c  pfx_pipeline_descriptor_pool.c  pfx_pipeline_frag_descriptor_set_layout.c  pfx_pipeline_layout.c  pfx_pipeline_renderpass.c  pfx_pipeline_update_descriptor_sets.c  pfx_pipeline_vertex_descriptor_set_layout.c
src/vulkan/: buffer.c  commandbuffer.c  commandpool.c  depth.c  descriptor.c  framebuffer.c  image.c  instance.c  memory.c  physicaldevice.c  pipeline.c  render.c  renderpass.c  sampler.c  setup.c  shaders.c  swapchain.c
(+3 files in other folders)
